syntax = "proto3";

package Protocol;


//변경 주의(클라 의존성)
enum RoomStateType {
  WAIT = 0;
  PREPARE = 1;
  INAGAME = 2;
}

enum ObjectType {
	TOWER = 0;
	PLAYER = 1;
	MONSTER = 2;
  PROJECTILE = 3;
	ENV = 4;
}

enum CardType {
	ATTACK_TOWER = 0;
	STR_ATTACK_TOWER = 1;
	// 추가해야됨
}

// 캐릭터 타입, 변경 주의(클라 의존성)
enum CharacterType {
  NoneCharacter = 0;
  Red = 1;
  Shark = 3;
  Malang = 5;
  Froggy = 7;
  BombMan = 8;
  SlowMan = 9;
  Mask = 10;
  Dinosour = 12;
}